[package]
name = "invarch-xcm-builder"
version = "0.1.0"
edition = "2021"


[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
log = { version = "0.4.14", default-features = false }


xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, tag = "v0.9.32" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = false, tag = "v0.9.32" }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.32" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.32" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.32" }

[features]
default = ["std"]

std = [
    "log/std",
    "codec/std",
    "xcm/std",
    "xcm-executor/std",
    "frame-support/std",
    "sp-core/std",
    "sp-io/std",
]
