[package]
name = "invarch-xcm-builder"
version = "0.1.0"
edition = "2021"


[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
log = { version = "0.4.14", default-features = false }


xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.42" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.42" }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.42" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.42" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.42" }

[dev-dependencies]
moonbeam-accountid20 = { package = "account", git = "https://github.com/PureStake/moonbeam/", branch = "master", default-features = false }
hex = { version = "0.4.3", default-features = false }

[patch.'https://github.com/purestake/substrate']
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }

[features]
default = ["std"]

std = [
    "log/std",
    "codec/std",
    "xcm/std",
    "xcm-executor/std",
    "frame-support/std",
    "sp-core/std",
    "sp-io/std",
    "moonbeam-accountid20/std"
]
